--- a/css/recursive.css
+++ b/css/recursive.css
@@ -20,6 +20,7 @@ body{
 .navbar{
     background-color: var(--dark-blue);
     height: 40px;
+    padding: 5px;
 }
 
 .navbar > div{
@@ -63,6 +64,7 @@ footer{
     justify-content: center;
     width: 100%;
     height: 5%;
+    padding: 5px;
     background-color: var(--dark-blue);
     color: var(--white);
 }
