--- a/css/recursive.css
+++ b/css/recursive.css
@@ -3,10 +3,6 @@
     margin: 0;
 }
 
-html{
-    height: 100%;
-}
-
 :root{
     --white: #FAFAFF;
     --black: #30343F;
@@ -16,7 +12,7 @@ html{
 }
 
 body{
-    min-height: 100%;
+    height: 100vh;
     position: relative;
     background-color: var(--black);
 }
